<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/icon_note"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icn_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>