<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.hosco.nextcrm.callcenter.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.hosco.nextcrm.callcenter.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.hosco.nextcrm.callcenter.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.hosco.nextcrm.callcenter.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>