<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/dimen30"
    android:background="@drawable/bg_progress"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen20"
        android:fontFamily="@font/sfprodisplay_medium"
        android:text="@string/txt_add_note"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20" />

    <EditText
        android:id="@+id/edCallNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_line"
        android:fontFamily="@font/sfprodisplay_regular"
        android:gravity="left"
        android:hint="@string/txt_hint_note"
        android:maxLines="10"
        android:minLines="2"
        android:padding="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen8"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16" />

    <TextView
        android:id="@+id/tvErrorCallNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:fontFamily="@font/sfprodisplay_regular"
        android:text="@string/txt_error_valid_common"
        android:textColor="@color/red"
        android:textSize="@dimen/sp14"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancelCallNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:fontFamily="@font/sfprodisplay_bold"
            android:padding="@dimen/dimen8"
            android:text="@string/txt_cancel"
            android:textColor="@color/gray2"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/btnOKCallNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:fontFamily="@font/sfprodisplay_bold"
            android:paddingHorizontal="@dimen/dimen16"
            android:paddingVertical="@dimen/dimen8"
            android:text="@string/txt_add"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

    </LinearLayout>
</LinearLayout>